RESOLVED FIXED134463
REGRESSION (Okemo): The contextual menu on tap and hold does not cancel the other gestures
https://bugs.webkit.org/show_bug.cgi?id=134463
Summary REGRESSION (Okemo): The contextual menu on tap and hold does not cancel the o...
Enrica Casucci
Reported 2014-06-30 15:37:21 PDT
1. Tap and hold on a link on a page to bring up the menu. Keep holding the finger down, do not lift. 2. with the finger still down drag it up and down. You'll see the page scrolling underneath the menu that appeared. If you lift the finger after the menu appears, you won't be able to scroll anymore. <rdar://problem/17388907>
Attachments
Patch (1.50 KB, patch)
2014-06-30 15:40 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-06-30 15:40:02 PDT
Enrica Casucci
Comment 2 2014-06-30 15:51:01 PDT
Committed revision 170606.
Note You need to log in before you can comment on or make changes to this bug.