REGRESSION (Okemo): The contextual menu on tap and hold does not cancel the other gestures. https://bugs.webkit.org/show_bug.cgi?id=134463 <rdar://problem/17388907>

Reviewed by Benjamin Poulain.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _longPressRecognized:]):



Canonical link: https://commits.webkit.org/152438@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170606 268f45cc-cd09-0410-ab3c-d52691b4dbfc